added new project card

--- a/index.html
+++ b/index.html
@@ -103,6 +103,26 @@
                         </div>
                     </div>
 
+                    <div class="project-card">
+                        <div class="project-card-image-container project-card-default-image">
+                            <!-- <img src="./images/1.png" alt="example image"> -->
+                        </div>
+                        <div class="tag-group">
+                            <p>Unity</p>
+                            <p>C#</p>
+                            <p>Proceduralne generowanie</p>
+                            <p>uGUI</p>
+                            <p>URP</p>
+                            <p>Post Processing</p>
+                        </div>
+                        <h4>Hex Map Generator</h4>
+                        <p>Jest to prosta prezentacja użycia kilku algorytmów do stworzenia heksagonalnej mapy wraz z biomami i surowcami.</p>
+                        <div class="project-card-link-group">
+                            <a target="_blank" href="https://github.com/SzymonHalucha/HexMapGenerator" class="first">GitHub</a>
+                            <!-- <a href="#" class="last">Asset Store</a> -->
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
